--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "author": "Fukuball",
   "license": "MIT",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-},
+ "scripts": {
+    "start": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
+    "start-dev": "NODE_ENV=development node-dev ./bin/www",
+    "postinstall": "node ./cmd/rarity_analyze.js && node ./cmd/rarity_analyze_normalized.js",
+    "rarity-analyze": "node ./cmd/rarity_analyze.js --mode=force && node ./cmd/rarity_analyze_normalized.js --mode=force",
+    "rarity-output-json": "node ./cmd/rarity_output_json.js"
+  },
   "dependencies": {
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.4.3",
